# Eril-Engine

./: .gitignore  .gitlab-ci.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Audio.cpp  Audio.h  Bounds.cpp  Bounds.h  CMakeCache.txt  CMakeLists.txt  ClassDiagram.cd  ConsoleGame.sln  ConsoleGame.vcxproj  ConsoleGame.vcxproj.filters  EngineGL.vcxproj  EngineGL.vcxproj.filters  Eril.vcxproj  Eril.vcxproj.filters  ErilEngine.sln  GameEngine.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Log.txt  MovementComponent.cpp  ParticleComponent.h  README.md  Settings.ini  StartEril.lnk  Timer.cpp  Timer.h  UpgradeLog.htm  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  collisionmesh.cpp  collisionmesh.h  collisionmodel.cpp  data.h  model.cpp  model.h
Assets/Animations/: Animation.fbx  Breakdance.fbx  GunPose.fbx  Idle.fbx  LeftStrafe.fbx  LeftStrafeWalk.fbx  RightStrafe.fbx  RightStrafeWalk.fbx  RunBack.fbx  Running.fbx  WalkBack.fbx  Walking.fbx  rifleIdle.fbx  rifleRun.fbx  rifleRunBack.fbx  rifleStrafeRunLeft.fbx  rifleStrafeRunRight.fbx  rifleStrafeWalkLeft.fbx  rifleStrafeWalkRight.fbx  rifleWalk.fbx  rifleWalkBack.fbx
Assets/Audio/: licence.txt
Assets/Fonts/: arial.fnt
Assets/Maps/: demo.map  test.map  test2.map
Assets/Materials/: Island.mater  PostProcess.mater  Sky.mater  alien_lower.mater  alien_upper.mater  candy.mater  cloud_sprite.mater  coin.mater  default.mater  default_skel.mater  flower.mater  ghost.mater  grass.mater  ground.mater  house.mater  hunter.mater  leaves.mater  leaves2.mater  ornaFloor.mater  rock.mater  shack.mater  sprite.mater  tileWall.mater  tracer.mater  tree.mater  wall.mater
Assets/Meshes/: Cube.fbx
Assets/Shaders/: BlurCompute.shader  LightCullingShader.shader  PostProcessMaster.shader  SSAO.shader  SSAOBlur.shader  ShadowColor.shader  SkyFilter.shader  shader_001.shader  shader_002.shader  shader_002_skel.shader  shader_003.shader  shader_004.shader  shader_005.shader  shader_sprite.shader  skyshader.shader
Assets/Skeletal/: Alien.fbx  AnimMesh.fbx  AnimMesh2.fbx
Engine/: BasicTypes.h  Core.cpp  Core.h  GameLoop.cpp  GameLoop.h  GarbageCollector.cpp  GarbageCollector.h  IRender.cpp  IRender.h  Launch.cpp  LightData.cpp  LightData.h  ObjectManager.cpp  ObjectManager.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Timer.cpp  Timer.h  nanort.h  nanosg.h
Engine/Core/: BasicTypes.cpp  BasicTypes.h  BulletObject.h  BulletPhysics.cpp  Core.cpp  Core.h  CurveData.cpp  CurveData.h  GameLoop.cpp  GameLoop.h  GarbageCollector.cpp  GarbageCollector.h  Launch.cpp  LightData.cpp  LightData.h  ObjectManager.cpp  ObjectManager.h  Physics.cpp  Physics.h  Settings.h  Timer.h  WinConsole.cpp  WinConsole.h
Engine/Gameplay/: GameState.cpp  GameState.h  InputControl.cpp  InputControl.h  PlayerController.cpp  PlayerController.h
Engine/Interface/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  FileManager.cpp  FileManager.h  IECS.cpp  IECS.h  IRender.cpp  IRender.h  WindowManager.cpp  WindowManager.h
Engine/Objects/: Actor.cpp  Actor.h  BaseObject.cpp  BaseObject.h  InstancedObject.cpp  InstancedObject.h  MovementComponent.cpp  MovementComponent.h  Terrain.cpp  Terrain.h  VisibleObject.cpp  VisibleObject.h
Engine/OpenGLRenderer/: Batcher.cpp  Batcher.h  Camera.cpp  InputControl.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Engine/RenderCore/: Particle.h  ParticleSystem.cpp  ParticleSystem.h  RenderCommands.h
Engine/ScriptCore/: CMakeLists.txt  Error.cpp  Error.h  Export.cpp  Export.h  Function.cpp  Function.h  Node.cpp  Node.h  Parser.cpp  Parser.h  ScriptCore.cpp  ScriptCore.h  ScriptCore.vcxproj  ScriptCore.vcxproj.filters  Value.h  defines.h  mian.cpp  script.txt
Engine/ScriptCore/Debug/ScriptCore.tlog/: CL.command.1.tlog  ScriptCore.lastbuildstate
Engine/ScriptCore/include/: ScriptCore.h  Value.h
Engine/ScriptCore/private/: Error.cpp  Error.h  Export.cpp  Function.cpp  Function.h  Node.h  Parser.cpp  Parser.h  Value.h  defines.h  dllmain.cpp  framework.h  mian.cpp
Engine/ScriptCore/tests/: CMakeLists.txt  test_assignment.cpp  test_boolean.cpp  test_functions.cpp  test_math.cpp
Engine/UI/: UIElements.cpp  UIElements.h  UIHolder.cpp  UIHolder.h
Eril_0.2/: Settings.ini
Eril_0.2/Shaders/: LightCullingShader.shader  PostProcessMaster.shader  SSAO.shader  ShadowColor.shader  SkyBox.shader  ground.mater  pillars.mater  shader_002.shader  test.mater
Game/: ECSTesting.cpp  ECSTesting.h  EngineInterface.cpp  EngineInterface.h  FallingCube.cpp  FallingCube.h  Hunter.cpp  Hunter.h  PauseUI.cpp  PauseUI.h  TestPlayer.cpp  TestPlayer.h  TestUI.cpp  TestUI.h
Game/Components/: PositionComponent.h
Game/Disco/: DiscoLightComponent.h  DiscoLightSystem.h  DiscoPlayer.cpp  DiscoPlayer.h  disco.map
Game/ECS_Examples/: ECSExample.cpp  ECSExample.h
Game/FlightGame/: CoinActor.cpp  CoinActor.h  EndScreen.cpp  Enemy.cpp  Enemy.h  FlightPlayer.cpp  FlightPlayer.h  ScoreUI.cpp  ScoreUI.h  StartScreen.cpp  skyflight.map
Game/ForestGame/: EndScreen.cpp  EndScreen.h  ForestPlayer.cpp  ForestPlayer.h  Ghost.cpp  Ghost.h  StartScreen.cpp  StartScreen.h  forest.map
Game/LoadingScreen/: LoadingPlayer.cpp  LoadingPlayer.h  LoadingUI.h  loading.map
Game/MainMenu/: MenuPlayer.cpp  (+4 more)
Maps/: test.map
OpenGLRenderer/: CMakeLists.txt  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.h
RelWithDebInfo/: EngineGL.exp
Release/: EngineGL.exp  EngineGL.lib
Shaders/: BlurCompute.shader  Composite.shader  LightCullingShader - Copy.shader  LightCullingShader.shader  Master - Copy.shader  Master.shader  PostProcessMaster.shader  PreDepth.shader  Shadow.shader  Shadow.shader.old  ShadowColor.shader.old  SkyDome.shader  SkyFilter.shader  for.mater  ground.mater  metal.mater  rocks.mater  shader_001.shader  shader_001.shader.old  shader_002.shader  shader_003.shader  shader_004.shader  test.mater
docs/: NamingStyles.md  ProjectPlan.md  ScriptDoc.md  TDD.md  demodesign.md  namecons.md
(+430 files in other folders)
